codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_auto_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Auto on                                       Auto mode (shift+tab to cycle)  "
